<package>
  <name>poslv_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS wrapper around libposlv (messages and services)
  </description>
  <author>Jerome Maye</author>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/ethz-asl/poslv-ros</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
